# nmbp-admin-backend/src/main/api/routes/adminRouter.ts
@@ -5,4 +5,6 @@ const adminRouter = express.Router();
 
 adminRouter.get("/health", adminController.health);
 
+adminRouter.post("/pledges", adminController.getPledges);
+
 export default adminRouter;
